language/move-lang/tests/move_check/translated_ir_tests/move/signer/does_not_have_store.exp
error[E05001]: ability constraint not satisfied
  ┌─ tests/move_check/translated_ir_tests/move/signer/does_not_have_store.move:5:9
  │
5 │         move_to(account, S<signer> { f: s })
  │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  │         │                │ │
  │         │                │ The type '0x8675309::M::S<signer>' can have the ability 'key' but the type argument 'signer' does not have the required ability 'store'
  │         │                The type '0x8675309::M::S<signer>' does not have the ability 'key'
  │         Invalid call of 'move_to'

